<resources>
    <string name="app_name">FakeCall</string>
    <string name="name">Harry Potter</string>
    <string name="incoming_video_call">Incoming Video Call....</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="fake_video_call">Fake Video Call</string>
    <string name="fake_message">Fake Message</string>
    <string name="see_more">See more</string>
    <string name="fake_call">Fake Call</string>
    <string name="search">Search</string>
    <string name="fake_chat">Fake Chat</string>
    <string name="return_">Return</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="flash">Flash</string>
    <string name="languages">Languages</string>
    <string name="rate">Rate</string>
    <string name="call_ended">Call Ended</string>
</resources>